# nosql-08

./: README.md  pyproject.toml
first/: search.py  seeds.py
second/: consumer.py  models.py  producer.py
