[tool.poetry]
name = "nosql-08"
version = "0.1.0"
description = ""
authors = ["Andrii Kylymnyk <a.kylymnyk@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pika = "^1.3.1"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
